# horizon-bms-test-tool

./: .gitignore  .gitmodules  BMS2000_Epiroc_0x300-0.4.0+0.dbc  CMakeLists.txt  CMakePresets.json  README.md  bms_main_v1.dbc  goldengate-0.4.0+0.eds
docs/: architecture.md  design-decisions.md  new-app-reference.md
src/: App.cpp  App.h  main.cpp
src/can/: CanBus.cpp  CanBus.h  CanFrame.h  ICanInterface.h  PcanInterface.cpp  PcanInterface.h  VirtualInterface.cpp  VirtualInterface.h
src/dbc/: DbcModel.cpp  DbcModel.h
src/ui/: BusMonitorPanel.cpp  BusMonitorPanel.h  FaultPanel.cpp  FaultPanel.h  ParametersPanel.cpp  ParametersPanel.h  PlotPanel.cpp  PlotPanel.h  RxPanel.cpp  RxPanel.h  SystemPanel.cpp  SystemPanel.h  TxPanel.cpp  TxPanel.h
